# Storage

./: .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 12a046b1f66e_create_models.py  43f97656b464_create_roles.py
app/api/: __init__.py  auth.py  files.py  health.py
app/database/: connection.py  minio_session.py  session.py
app/dependencies/: check_token.py
app/models/: __init__.py  models.py  role.py
app/schemas/: file_schema.py  user_schema.py
app/services/: department.py  files.py  user_service.py
app/settings/: config.py  security.py
